--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.25.9",
+    "@babel/preset-react": "^7.25.9",
     "@eslint/js": "^9.14.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
@@ -59,9 +61,10 @@
     "react-icons": "^5.3.0"
   },
   "scripts": {
+    "dist": "rm -rf dist && mkdir dist && babel src -d dist --copy-files",
     "format:check": "prettier --check .",
     "format": "prettier --write .",
     "lint": "eslint .",
-    "samples": "cd samples && npm start"
+    "samples": "npm run dist && cd samples && npm start"
   }
 }
