--- a/package.json
+++ b/package.json
@@ -51,7 +51,11 @@
     "prettier": "^3.3.3",
     "prop-types": "^15.8.1"
   },
-  "peerDependencies": {},
+  "peerDependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
+  },
   "scripts": {
     "dist": "rm -rf dist && mkdir dist && babel src --out-dir dist --copy-files",
     "format:check": "prettier --check .",
